--- a/aztec-up/bin/docker-compose.test.yml
+++ b/aztec-up/bin/docker-compose.test.yml
@@ -1,21 +1,21 @@
 version: "3"
 services:
-  txe:
+  aztec:
     image: "aztecprotocol/aztec"
     environment:
       DEBUG: # Loaded from the user shell if explicitly set
       HOST_WORKDIR: "${PWD}" # Loaded from the user shell to show log files absolute path in host
     volumes:
       - ./log:/usr/src/yarn-project/aztec/log:rw
-    command: test
+    command: start --txe
       
   aztec-nargo:
     image: "aztecprotocol/aztec-nargo"
     entrypoint: /usr/bin/nargo
     environment:
       HOME: # Loaded from the user shell
-      NARGO_FOREIGN_CALL_TIMEOUT: 300000
+      NARGO_FOREIGN_CALL_TIMEOUT: 300000 # To avoid timeouts when many tests run at once
     volumes:
       - ${HOME}:${HOME}
     depends_on:
-      - txe
+      - aztec
