--- a/noir-projects/noir-contracts/contracts/token_with_refunds_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/token_with_refunds_contract/Nargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "private_fpc_contract"
+name = "token_contract"
 authors = [""]
 compiler_version = ">=0.25.0"
 type = "contract"
 
 [dependencies]
 aztec = { path = "../../../aztec-nr/aztec" }
+compressed_string = { path = "../../../aztec-nr/compressed-string" }
 authwit = { path = "../../../aztec-nr/authwit" }
-token_with_refunds = { path = "../token_with_refunds_contract" }
