--- a/barretenberg/cpp/src/barretenberg/world_state_service/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/world_state_service/CMakeLists.txt
@@ -1,5 +1,4 @@
-if (NOT(FUZZING))
+if(NOT(FUZZING))
   add_executable(world_state main.cpp)
-  target_link_libraries(world_state lmdb crypto_merkle_tree crypto_pedersen_hash common)
-
-  endif()
+  target_link_libraries(world_state lmdb-lib crypto_merkle_tree crypto_pedersen_hash common)
+endif()
