--- a/yarn-project/cli/package.json
+++ b/yarn-project/cli/package.json
@@ -58,18 +58,10 @@
     ]
   },
   "dependencies": {
-    "@aztec/accounts": "workspace:^",
     "@aztec/aztec.js": "workspace:^",
-    "@aztec/bb-prover": "workspace:^",
-    "@aztec/builder": "workspace:^",
     "@aztec/circuit-types": "workspace:^",
-    "@aztec/circuits.js": "workspace:^",
-    "@aztec/ethereum": "workspace:^",
     "@aztec/foundation": "workspace:^",
-    "@aztec/l1-artifacts": "workspace:^",
-    "@aztec/noir-contracts.js": "workspace:^",
     "@aztec/noir-protocol-circuits-types": "workspace:^",
-    "@aztec/protocol-contracts": "workspace:^",
     "@aztec/types": "workspace:^",
     "@iarna/toml": "^2.2.5",
     "@libp2p/peer-id-factory": "^3.0.4",
@@ -93,6 +85,15 @@
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "peerDependencies": {
+    "@aztec/accounts": "workspace:^",
+    "@aztec/bb-prover": "workspace:^",
+    "@aztec/circuits.js": "workspace:^",
+    "@aztec/ethereum": "workspace:^",
+    "@aztec/l1-artifacts": "workspace:^",
+    "@aztec/noir-contracts.js": "workspace:^",
+    "@aztec/protocol-contracts": "workspace:^"
   },
   "files": [
     "dest",
