--- a/yarn-project/builder/package.json
+++ b/yarn-project/builder/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "@aztec/cli",
-  "version": "0.32.0",
+  "name": "@aztec/builder",
+  "version": "0.1.0",
   "type": "module",
   "exports": {
-    "./builder": "./dest/cmds/builder/index.js",
-    "./infrastructure": "./dest/cmds/infrastructure/index.js"
+    ".": "./dest/index.js",
+    "./cli": "./dest/cli/index.js"
   },
   "typedocOptions": {
     "entryPoints": [
-      "./dest/builder/index.js"
+      "./src/index.ts"
     ],
-    "name": "Aztec CLI",
+    "name": "Aztec builder",
     "tsconfig": "./tsconfig.json"
+  },
+  "bin": {
+    "aztec-builder": "dest/cli.js"
   },
   "scripts": {
     "build": "yarn clean && tsc -b",
     "build:dev": "tsc -b --watch",
+    "generate": "tsc -b",
     "clean": "rm -rf ./dest .tsbuildinfo",
     "formatting": "run -T prettier --check ./src && run -T eslint ./src",
     "formatting:fix": "run -T eslint --fix ./src && run -T prettier -w ./src",
@@ -25,15 +29,16 @@
     "../package.common.json"
   ],
   "jest": {
-    "preset": "ts-jest/presets/default-esm",
     "moduleNameMapper": {
       "^(\\.{1,2}/.*)\\.[cm]?js$": "$1"
     },
+    "moduleFileExtensions": [
+      "js",
+      "ts",
+      "cts"
+    ],
     "testRegex": "./src/.*\\.test\\.(js|mjs|ts)$",
     "rootDir": "./src",
-    "extensionsToTreatAsEsm": [
-      ".ts"
-    ],
     "transform": {
       "^.+\\.tsx?$": [
         "@swc/jest",
@@ -47,6 +52,9 @@
         }
       ]
     },
+    "extensionsToTreatAsEsm": [
+      ".ts"
+    ],
     "reporters": [
       [
         "default",
@@ -57,46 +65,16 @@
     ]
   },
   "dependencies": {
-    "@aztec/aztec.js": "workspace:^",
-    "@aztec/circuit-types": "workspace:^",
-    "@aztec/foundation": "workspace:^",
-    "@aztec/types": "workspace:^",
-    "@iarna/toml": "^2.2.5",
-    "@libp2p/peer-id-factory": "^3.0.4",
-    "axios": "^1.7.2",
-    "commander": "^12.1.0",
-    "semver": "^7.5.4",
-    "solc": "^0.8.26",
-    "source-map-support": "^0.5.21",
-    "tslib": "^2.4.0",
-    "viem": "^2.7.15"
+    "@aztec/cli": "workspace:^",
+    "commander": "^12.1.0"
   },
   "devDependencies": {
-    "@aztec/accounts": "workspace:^",
-    "@aztec/circuits.js": "workspace:^",
-    "@aztec/ethereum": "workspace:^",
-    "@aztec/l1-artifacts": "workspace:^",
-    "@aztec/protocol-contracts": "workspace:^",
     "@jest/globals": "^29.5.0",
     "@types/jest": "^29.5.0",
-    "@types/lodash.startcase": "^4.4.7",
     "@types/node": "^18.7.23",
-    "@types/semver": "^7.5.2",
-    "@types/source-map-support": "^0.5.10",
     "jest": "^29.5.0",
-    "jest-mock-extended": "^3.0.5",
-    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
-  },
-  "peerDependencies": {
-    "@aztec/accounts": "workspace:^",
-    "@aztec/bb-prover": "workspace:^",
-    "@aztec/circuits.js": "workspace:^",
-    "@aztec/ethereum": "workspace:^",
-    "@aztec/l1-artifacts": "workspace:^",
-    "@aztec/noir-contracts.js": "workspace:^",
-    "@aztec/protocol-contracts": "workspace:^"
   },
   "files": [
     "dest",
