feat: Initial prover-node package

--- a/yarn-project/package.json
+++ b/yarn-project/package.json
@@ -47,6 +47,7 @@
     "p2p-bootstrap",
     "protocol-contracts",
     "prover-client",
+    "prover-node",
     "rollup-provider",
     "sequencer-client",
     "scripts",
