--- a/yarn-project/tsconfig.json
+++ b/yarn-project/tsconfig.json
@@ -43,6 +43,7 @@
     { "path": "p2p-bootstrap/tsconfig.json" },
     { "path": "protocol-contracts/tsconfig.json" },
     { "path": "prover-client/tsconfig.json" },
+    { "path": "prover-node/tsconfig.json" },
     { "path": "sequencer-client/tsconfig.json" },
     { "path": "types/tsconfig.json" },
     { "path": "world-state/tsconfig.json" },
