trying to cleanup circular deps

--- a/yarn-project/cli/package.json
+++ b/yarn-project/cli/package.json
@@ -96,6 +96,7 @@
     "@aztec/ethereum": "workspace:^",
     "@aztec/l1-artifacts": "workspace:^",
     "@aztec/noir-contracts.js": "workspace:^",
+    "@aztec/noir-protocol-circuits-types": "workspace:^",
     "@aztec/protocol-contracts": "workspace:^"
   },
   "files": [
