--- a/yarn-project/end-to-end/scripts/docker-compose.yml
+++ b/yarn-project/end-to-end/scripts/docker-compose.yml
@@ -15,6 +15,7 @@ services:
 
   sandbox:
     image: aztecprotocol/aztec:${AZTEC_DOCKER_TAG:-latest}
+    command: 'start --sandbox'
     environment:
       DEBUG: 'aztec:*'
       DEBUG_COLORS: 1
