--- a/boxes/docker-compose.yml
+++ b/boxes/docker-compose.yml
@@ -6,7 +6,7 @@ services:
 
   aztec:
     image: aztecprotocol/aztec:${AZTEC_DOCKER_TAG:-latest}
-    command: 'start --p2p-bootstrap'
+    command: 'start --sandbox'
     environment:
       ETHEREUM_HOST: http://ethereum:8545
       CHAIN_ID: 31337
