--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -24,17 +24,14 @@ jobs:
       - uses: ./.github/ci-setup-action
         env:
           DOCKERHUB_PASSWORD: "${{ secrets.DOCKERHUB_PASSWORD }}"
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         with:
           concurrency_key: docs-preview-${{ inputs.username || github.actor }}-x86
 
       - timeout-minutes: 25
         run: |
-          touch .secrets
-          echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID" > .secrets
-          echo "AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY" >> .secrets
-
           earthly-ci --no-output ./docs/+deploy-prod \
-          --secret-file-path .secrets \
           --NETLIFY_AUTH_TOKEN=${{ secrets.NETLIFY_AUTH_TOKEN }} \
           --NETLIFY_SITE_ID=${{ secrets.NETLIFY_SITE_ID }} \
           --COMMIT_TAG=${{ inputs.tag }}
