fix: tree compatibility

--- a/barretenberg/cpp/src/barretenberg/world_state/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/world_state/CMakeLists.txt
@@ -1,1 +1,1 @@
-barretenberg_module(world_state crypto_merkle_tree cryto_pedersen_hash)
+barretenberg_module(world_state crypto_merkle_tree stdlib_pedersen_hash)
