chore: undo changes to yarn-project

--- a/yarn-project/prover-client/tsconfig.json
+++ b/yarn-project/prover-client/tsconfig.json
@@ -22,9 +22,6 @@
       "path": "../kv-store"
     },
     {
-      "path": "../merkle-tree"
-    },
-    {
       "path": "../noir-protocol-circuits-types"
     },
     {
@@ -34,5 +31,5 @@
       "path": "../world-state"
     }
   ],
-  "include": ["src"]
+  "include": ["src", "../bb-prover/src/test/test_circuit_prover.ts"]
 }
