--- a/barretenberg/cpp/src/barretenberg/commitment_schemes_recursion/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/commitment_schemes_recursion/CMakeLists.txt
@@ -1,1 +1,1 @@
-barretenberg_module(commitment_schemes_recursion commitment_schemes stdlib_primitives)
+barretenberg_module(commitment_schemes_recursion commitment_schemes stdlib_poseidon2)
