--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -177,6 +177,7 @@ jobs:
       - uses: ./.github/ci-setup-action
       - name: Bootstrap devnet
         run: |
+          echo "waiting for PXE to be available"
           ./.github/scripts/wait_for_infra.sh pxe ${{ env.DEPLOY_TAG }} ${{ secrets.FORK_API_KEY }}
           docker pull aztecprotocol/aztec:${{ env.DEPLOY_TAG }}
           docker run aztecprotocol/aztec:${{ env.DEPLOY_TAG }} bootstrap \
