--- a/noir-projects/noir-contracts/Nargo.toml
+++ b/noir-projects/noir-contracts/Nargo.toml
@@ -37,6 +37,7 @@ members = [
     "contracts/schnorr_single_key_account_contract",
     "contracts/stateful_test_contract",
     "contracts/test_contract",
+    "contracts/test2_contract",
     "contracts/test_log_contract",
     "contracts/token_contract",
     "contracts/token_blacklist_contract",
