--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -38,7 +38,7 @@ jobs:
     needs: setup
     runs-on: ${{ github.actor }}-x86
     outputs:
-      mainnet_fork_changed: ${{ steps.check_fork_changes.outputs.result }}
+      # mainnet_fork_changed: ${{ steps.check_fork_changes.outputs.result }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -48,27 +48,27 @@ jobs:
         with:
           concurrency_key: build-release-artifacts-${{ github.actor }}
           dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
-      - name: "Build & Push aztec images"
-        timeout-minutes: 40
-        run: |
-          earthly-ci \
-          --no-output --push ./yarn-project+export-aztec-arch --DIST_TAG=${{ env.DEPLOY_TAG }}
+      # - name: "Build & Push aztec images"
+      #   timeout-minutes: 40
+      #   run: |
+      #     earthly-ci \
+      #     --no-output --push ./yarn-project+export-aztec-arch --DIST_TAG=${{ env.DEPLOY_TAG }}
 
-      - name: Check if mainnet fork needs deployment
-        id: check_fork_changes
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { execSync } = require('child_process');
-            const changedFiles = execSync('git diff --name-only ${{ github.event.before }} ${{ github.sha }}').toString().split('\n');
-            const fileChanged = changedFiles.some(file => file.startsWith('iac/mainnet-fork'));
-            return fileChanged
+      # - name: Check if mainnet fork needs deployment
+      #   id: check_fork_changes
+      #   uses: actions/github-script@v7
+      #   with:
+      #     script: |
+      #       const { execSync } = require('child_process');
+      #       const changedFiles = execSync('git diff --name-only ${{ github.event.before }} ${{ github.sha }}').toString().split('\n');
+      #       const fileChanged = changedFiles.some(file => file.startsWith('iac/mainnet-fork'));
+      #       return fileChanged
 
-      - name: Build & push mainnet fork image
-        if: steps.check_fork_changes.outputs.result == 'true'
-        run: |
-          earthly-ci \
-          --no-output --push ./iac/mainnet-fork+export-mainnet-fork --DIST_TAG=${{ env.DEPLOY_TAG }}
+      # - name: Build & push mainnet fork image
+      #   if: steps.check_fork_changes.outputs.result == 'true'
+      #   run: |
+      #     earthly-ci \
+      #     --no-output --push ./iac/mainnet-fork+export-mainnet-fork --DIST_TAG=${{ env.DEPLOY_TAG }}
 
   terraform_deploy:
     runs-on: ubuntu-latest
@@ -91,14 +91,14 @@ jobs:
           aws-region: eu-west-2
 
       - name: Deploy mainnet fork
-        if: needs.build.outputs.mainnet_fork_changed == 'true'
+        # if: needs.build.outputs.mainnet_fork_changed == 'true'
         working-directory: ./iac/mainnet-fork/terraform
         run: |
           terraform init -input=false -backend-config="key=${{ env.DEPLOY_TAG }}/mainnet-fork"
           terraform apply -input=false -auto-approve -replace="aws_ecs_service.aztec_mainnet_fork" -replace="aws_efs_file_system.aztec_mainnet_fork_data_store"
 
       - name: Wait for mainnet fork deployment
-        if: needs.build.outputs.mainnet_fork_changed == 'true'
+        # if: needs.build.outputs.mainnet_fork_changed == 'true'
         run: |
           ./.github/scripts/wait_for_infra.sh mainnet-fork ${{ env.DEPLOY_TAG }} ${{ secrets.FORK_API_KEY }}
 
@@ -179,6 +179,7 @@ jobs:
             --rpc-url https://api.aztec.network/${{ env.DEPLOY_TAG }}/aztec-pxe/${{ secrets.FORK_API_KEY }} \
             --l1-chain-id ${{ env.L1_CHAIN_ID }} \
             | tee  ./bootstrap_addresses.txt
+          ./.github/scripts/extract_output.sh l2-bootstrap ./bootstrap_addresses.txt
 
       - name: Deploy contracts
         run: |
@@ -186,6 +187,8 @@ jobs:
             --rpc-url https://api.aztec.network/${{ env.DEPLOY_TAG }}/aztec-pxe/${{ secrets.FORK_API_KEY }} \
             | tee ./account.txt
           ./.github/scripts/extract_output.sh private-key ./account.txt
+
+          echo "Private keyin step: $AZTEC_PRIVATE_KEY"
 
           docker run aztecprotocol/aztec:${{ env.DEPLOY_TAG }} deploy TokenContract \
             --args $AZTEC_ADDRESS DevCoin DEV 18 \
