--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -143,23 +143,22 @@ jobs:
             --rpc-url https://api.aztec.network/${{ env.DEPLOY_TAG }}/aztec-pxe/${{ secrets.FORK_API_KEY }} \
             --l1-chain-id ${{ env.L1_CHAIN_ID }} \
             | tee  ./bootstrap_addresses.txt
-          ./.github/scripts/extract_output.sh l2-bootstrap ./bootstrap_addresses.txt
+          source ./.github/scripts/extract_output.sh l2-bootstrap ./bootstrap_addresses.txt
 
       - name: Deploy contracts
         run: |
           docker run aztecprotocol/aztec:${{ env.DEPLOY_TAG }} create-account \
             --rpc-url https://api.aztec.network/${{ env.DEPLOY_TAG }}/aztec-pxe/${{ secrets.FORK_API_KEY }} \
             | tee ./account.txt
-          ./.github/scripts/extract_output.sh private-key ./account.txt
+          source ./.github/scripts/extract_output.sh account ./account.txt
 
-          echo "Private keyin step: $AZTEC_PRIVATE_KEY"
 
           docker run aztecprotocol/aztec:${{ env.DEPLOY_TAG }} deploy TokenContract \
             --args $AZTEC_ADDRESS DevCoin DEV 18 \
             --private-key $AZTEC_PRIVATE_KEY \
             --public-deployment \
             | tee ./token_contract.txt
-          ./.github/scripts/extract_output.sh l2-contract ./token_contract.txt TOKEN_CONTRACT_ADDRESS
+          source ./.github/scripts/extract_output.sh l2-contract ./token_contract.txt TOKEN_CONTRACT_ADDRESS
 
           docker run aztecprotocol/aztec:${{ env.DEPLOY_TAG }} deploy FPCContract \
             --args $TOKEN_CONTRACT_ADDRESS $FEE_JUICE_ADDRESS \
@@ -167,7 +166,7 @@ jobs:
             --public-deployment \
             --class-registration \
             | tee ./fpc_contract.txt
-          ./.github/scripts/extract_output.sh l2-contract ./FPC_contract.txt FPC_CONTRACT_ADDRESS
+          source ./.github/scripts/extract_output.sh l2-contract ./FPC_contract.txt FPC_CONTRACT_ADDRESS
 
       - name: Upload addreses to S3
         run: |
