--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -33,10 +33,43 @@ jobs:
       username: master
       runner_type: builder-x86
     secrets: inherit
+  build:
+    needs: setup
+    runs-on: ${{ github.actor }}-x86
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: "${{ env.GIT_COMMIT }}"
+          fetch-depth: 0
+      - uses: ./.github/ci-setup-action
+        with:
+          concurrency_key: build-release-artifacts-${{ github.actor }}
+          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
+      - name: "Build & Push aztec images"
+        timeout-minutes: 40
+        run: |
+          earthly-ci \
+          --no-output --push ./yarn-project+export-aztec-arch --DIST_TAG=${{ env.DEPLOY_TAG }}
+
+      - name: Check if mainnet fork needs deployment
+        id: check_fork_changes
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { execSync } = require('child_process');
+            const changedFiles = execSync('git diff --name-only ${{ github.event.before }} ${{ github.sha }}').toString().split('\n');
+            const fileChanged = changedFiles.some(file => file.startsWith('iac/mainnet-fork'));
+            return fileChanged
+
+      - name: Build & push mainnet fork image
+        if: steps.check_fork_changes.outputs.result == 'true'
+        run: |
+          earthly-ci \
+          --no-output --push ./iac/mainnet-fork+export-mainnet-fork --DIST_TAG=${{ env.DEPLOY_TAG }}
 
   terraform_deploy:
     runs-on: ubuntu-latest
-    needs: setup
+    needs: build
     steps:
       - uses: actions/checkout@v4
         with:
@@ -55,14 +88,12 @@ jobs:
           aws-region: eu-west-2
 
       - name: Deploy mainnet fork
-        # if: needs.build.outputs.mainnet_fork_changed == 'true'
         working-directory: ./iac/mainnet-fork/terraform
         run: |
           terraform init -input=false -backend-config="key=${{ env.DEPLOY_TAG }}/mainnet-fork"
-          terraform apply -input=false -auto-approve -replace="aws_ecs_service.aztec_mainnet_fork" -replace="aws_efs_file_system.aztec_mainnet_fork_data_store"
+          terraform apply -input=false -auto-approve -replace="aws_efs_file_system.aztec_mainnet_fork_data_store"
 
       - name: Wait for mainnet fork deployment
-        # if: needs.build.outputs.mainnet_fork_changed == 'true'
         run: |
           ./.github/scripts/wait_for_infra.sh mainnet-fork ${{ env.DEPLOY_TAG }} ${{ secrets.FORK_API_KEY }}
 
