feat: Run prover-node via aztec start
Includes:
- Patched getInitialHeader
- Get proven block number from pxe
- Recurringly query unproven chain from prover-node

--- a/yarn-project/aztec/package.json
+++ b/yarn-project/aztec/package.json
@@ -48,6 +48,7 @@
     "@aztec/p2p-bootstrap": "workspace:^",
     "@aztec/protocol-contracts": "workspace:^",
     "@aztec/prover-client": "workspace:^",
+    "@aztec/prover-node": "workspace:^",
     "@aztec/pxe": "workspace:^",
     "@aztec/telemetry-client": "workspace:^",
     "@aztec/txe": "workspace:^",
