--- a/yarn-project/txe/package.json
+++ b/yarn-project/txe/package.json
@@ -57,6 +57,7 @@
     ]
   },
   "dependencies": {
+    "@aztec/accounts": "workspace:^",
     "@aztec/archiver": "workspace:^",
     "@aztec/aztec.js": "workspace:^",
     "@aztec/circuit-types": "workspace:^",
