feat: bootstrap devnet cmd

--- a/yarn-project/cli/package.json
+++ b/yarn-project/cli/package.json
@@ -5,6 +5,7 @@
   "exports": {
     "./builder": "./dest/cmds/builder/index.js",
     "./contracts": "./dest/cmds/contracts/index.js",
+    "./devnet": "./dest/cmds/devnet/index.js",
     "./infrastructure": "./dest/cmds/infrastructure/index.js",
     "./l1": "./dest/cmds/l1/index.js",
     "./pxe": "./dest/cmds/pxe/index.js",
