--- a/yarn-project/tsconfig.json
+++ b/yarn-project/tsconfig.json
@@ -27,6 +27,7 @@
     { "path": "aztec.js/tsconfig.json" },
     { "path": "aztec-node/tsconfig.json" },
     { "path": "bb-prover/tsconfig.json" },
+    { "path": "bot/tsconfig.json" },
     { "path": "pxe/tsconfig.json" },
     { "path": "aztec/tsconfig.json" },
     { "path": "circuits.js/tsconfig.json" },
