--- a/yarn-project/bot/package.json
+++ b/yarn-project/bot/package.json
@@ -49,16 +49,15 @@
     ]
   },
   "dependencies": {
-    "@aztec/archiver": "workspace:^",
+    "@aztec/accounts": "workspace:^",
+    "@aztec/aztec.js": "workspace:^",
     "@aztec/circuit-types": "workspace:^",
     "@aztec/circuits.js": "workspace:^",
+    "@aztec/entrypoints": "workspace:^",
     "@aztec/foundation": "workspace:^",
-    "@aztec/kv-store": "workspace:^",
-    "@aztec/prover-client": "workspace:^",
-    "@aztec/sequencer-client": "workspace:^",
-    "@aztec/simulator": "workspace:^",
-    "@aztec/telemetry-client": "workspace:^",
-    "@aztec/world-state": "workspace:^",
+    "@aztec/noir-contracts.js": "workspace:^",
+    "@aztec/protocol-contracts": "workspace:^",
+    "@aztec/types": "workspace:^",
     "source-map-support": "^0.5.21",
     "tslib": "^2.4.0"
   },
