--- a/yarn-project/bot/tsconfig.json
+++ b/yarn-project/bot/tsconfig.json
@@ -7,7 +7,10 @@
   },
   "references": [
     {
-      "path": "../archiver"
+      "path": "../accounts"
+    },
+    {
+      "path": "../aztec.js"
     },
     {
       "path": "../circuit-types"
@@ -16,25 +19,19 @@
       "path": "../circuits.js"
     },
     {
+      "path": "../entrypoints"
+    },
+    {
       "path": "../foundation"
     },
     {
-      "path": "../kv-store"
+      "path": "../noir-contracts.js"
     },
     {
-      "path": "../prover-client"
+      "path": "../protocol-contracts"
     },
     {
-      "path": "../sequencer-client"
-    },
-    {
-      "path": "../simulator"
-    },
-    {
-      "path": "../telemetry-client"
-    },
-    {
-      "path": "../world-state"
+      "path": "../types"
     }
   ],
   "include": ["src"]
