--- a/.github/workflows/metrics-deploys.yml
+++ b/.github/workflows/metrics-deploys.yml
@@ -12,6 +12,8 @@ env:
   GIT_COMMIT: ${{ github.sha }}
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  GRAFANA_CLIENT_ID: ${{ secrets.GRAFANA_CLIENT_ID }}
+  GRAFANA_CLIENT_SECRET: ${{ secrets.GRAFANA_CLIENT_SECRET }}
   # TF Vars
   TF_VAR_DOCKERHUB_ACCOUNT: aztecprotocol
 
@@ -52,6 +54,14 @@ jobs:
           docker build -t aztecprotocol/aztec-prometheus .
           docker push aztecprotocol/aztec-prometheus
 
+      - name: Build & push grafana
+        working-directory: ./metrics/grafana
+        if: steps.check_metrics_changes.outputs.result == 'true'
+        run: |
+          ./replace_secrets.sh $GRAFANA_CLIENT_ID $GRAFANA_CLIENT_SECRET
+          docker build -t aztecprotocol/aztec-grafana .
+          docker push aztecprotocol/aztec-grafana
+
   terraform_deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -72,8 +82,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-2
 
-      - name: Deploy mainnet fork
+      - name: Deploy prometheus
         working-directory: ./metrics/prometheus/terraform
         run: |
           terraform init -input=false -backend-config="key=aztec-prometheus"
+          terraform apply -input=false -auto-approve
+
+      - name: Deploy grafana
+        working-directory: ./metrics/grafana/terraform
+        run: |
+          terraform init -input=false -backend-config="key=aztec-grafana"
           terraform apply -input=false -auto-approve
